--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ workflows:
       - build:
           filters:
             branches:
-              only: master
+              only: main
       - publish-latest:
           requires:
             - build
@@ -55,4 +55,4 @@ workflows:
             - DockerHub
           filters:
             branches:
-              only: master
+              only: main
